# rarefied-gas-solver

./: .gitignore  CMakeLists.txt  README.md
doc/: dip.doc
inc/: cell.h  config.h  gas.h  grid.h  grid_config_manager.h  grid_constructor.h  grid_manager.h  impulse.h  main.h  options.h  out_results.h  parallel.h  solver.h  solver_info.h  timer.h  types.h  vessel_grid.h
inc/integral/: ci.hpp  ci_impl.hpp
resources/: Emmiter_Temperature.txt
scripts/: buildPictures.py  config.py  config.txt  config_backup.txt  config_dropbox.txt  config_launches.txt  config_old.txt  custom_plot.py  plot.py  plot1.py  plot_CO.py  plot_GPRT.py  plot_GPRT_CO.py  plot_GPRT_line.py  plot_MEZ.py  plot_MEZ_var.py  plot_Termos_1D.py  plot_XeKr.py  plot_average.py  plot_custom.py  plot_flow_2D.py  plot_flow_CsKrXe.py  plot_gprt_areas.py  plot_helper.py  plot_new.py  plot_old.py  rm_pics.py  whole_data_plot.py
src/: CMakeLists.txt  Solver.cpp  Solver.h  cell.cpp  config.cpp  config.h  gas.cpp  gprt_constructor.cpp  grid.cpp  grid_config_manager.cpp  grid_constructor.cpp  grid_manager.cpp  impulse.cpp  main.cpp  main.h  normalizer.cpp  normalizer.h  options.cpp  out_results.cpp  out_results.h  parallel.cpp  solver.cpp  solver.h  solver_info.cpp  vessel_grid.cpp
src/config/: config.cpp  config.h  normalizer.cpp  normalizer.h
src/core/: Application.cpp  Application.h  Config.cpp  Config.h  KeyboardManager.cpp  KeyboardManager.h  ResultsFormatter.cpp  ResultsFormatter.h  ResultsWriter.cpp  ResultsWriter.h  Solver.cpp  Solver.h  main.cpp  main.h
src/grid/: BaseCell.cpp  BaseCell.h  BorderCell.cpp  BorderCell.h  Cell.cpp  Cell.h  CellConnection.cpp  CellConnection.h  CellData.cpp  CellData.h  CellParameters.h  CellResults.h  GPRTConstructor.h  Grid.cpp  Grid.h  GridBox.cpp  GridBox.h  GridBuffer.cpp  GridBuffer.h  GridConstructor.h  GridMaker.cpp  GridMaker.h  MEZConstructor.h  NormalCell.cpp  NormalCell.h  ParallelCell.cpp  ParallelCell.h  TestConstructor.h  cell.cpp  cell.h  emitter.cpp  gprt_constructor.cpp  grid.cpp  grid.h  grid_constructor.cpp  grid_constructor.h  grid_manager.cpp  grid_manager.h  vessel_grid.h
src/grid_new/: Cell.cpp  Cell.h  CellData.h  CellWrapper.h  Grid.cpp  Grid.h  GridMaker.cpp  GridMaker.h  Parameters.h
src/integral/: ci.cpp  ci.hpp  ci_impl.hpp  korobov.hpp  sse.hpp  sse_impl.hpp  v.hpp
src/mesh/: Element.cpp  Element.h  ElementBorder.h  Hexahedron.h  Line.h  Mesh.cpp  Mesh.h  MeshParser.cpp  MeshParser.h  Node.cpp  Node.h  PhysicalEntity.h  Point.h  Prism.h  Quadrangle.h  SideElement.h  Tetrahedron.h  Triangle.h
src/parameters/: BetaChain.cpp  BetaChain.h  BoundaryParameters.h  Gas.cpp  Gas.h  GradientParameter.h  Impulse.cpp  Impulse.h  ImpulseSphere.cpp  ImpulseSphere.h  InitialParameters.h  beta_chain.cpp  beta_chain.h  gas.cpp  gas.h  impulse.cpp  impulse.h
src/utilities/: Config.cpp  Config.h  Logger.h  Normalizer.cpp  Normalizer.h  Parallel.cpp  Parallel.h  SerializationUtils.cpp  SerializationUtils.h  Types.h  Utils.cpp  Utils.h  config.cpp  config.h  normalizer.cpp  normalizer.h  parallel.cpp  parallel.h  types.h  utils.h
src_old/grid_old/: emitter.cpp  emitter.h  gprt_constructor.cpp  grid.cpp  grid.h  grid_constructor.cpp  grid_constructor.h  grid_manager.cpp  grid_manager.h
